--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="bigcont">
+
+    <button id="rck">Rock</button>
+    <button id="pap">Paper</button>
+    <button id="srs">Scissors</button>
+
+</div>
+<div class="cont">
+    <div id="round-result">Round result:</div>
+    <div id="score">Score:</div>
+    <div id="match-result"></div>
+</div>
+
+
+
     <script src="script.js">
         
     </script>
